# GraphEngine

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphEngine.cpp  GraphGeneration.cpp  GraphGeneration.h  Input.cpp  Input.h  NodeAndEdge.h  OpinionSimulation.cpp  OpinionSimulation.h  README.md  Settings.h  Simulation.cpp  Simulation.h  testMatrix.txt  testMatrix2.txt  testMatrix3.txt
